--- a/src/peakrdl_python/templates/addrmap_udp_property.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_udp_property.py.jinja
@@ -15,6 +15,22 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #}
 
+{%- macro udp_property_dict_entry(name, value) %}
+    {% if isinstance(value, systemrdlUserStruct) %}
+    '{{name}}' : {
+        {% for sub_name, sub_value in value.members.items() %}
+        {{udp_property_dict_entry(sub_name, sub_value)|indent(4)}}
+        {% endfor %}
+                },
+    {% elif isinstance(value, systemrdlUserEnum) %}
+    '{{name}}' : {{ type(value).type_name + '_property_enumcls.' + value.name.upper() }} ,
+    {% elif isinstance(value, str) %}
+    '{{name}}' : "{{ value }}" ,
+    {% else %}
+    '{{name}}' : {{ value }} ,
+    {% endif %}
+{% endmacro %}
+
 {%- macro udp_property(node) %}
 
     {% set property_list = get_properties_to_include(node,udp_to_include) %}
@@ -23,14 +39,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     def udp(self) -> UDPStruct:
         return {
             {% for property_name in property_list %}
-            {% set property_value = node.get_property(property_name) %}
-                {% if isinstance(property_value, systemrdlUserEnum) %}
-            '{{property_name}}' : {{ type(property_value).type_name + '_property_enumcls.' + property_value.name.upper() }} ,
-                {% elif isinstance(property_value, str) %}
-            '{{property_name}}' : "{{ property_value }}" ,
-                {% else %}
-            '{{property_name}}' : {{ property_value }} ,
-                {% endif %}
+            {{udp_property_dict_entry(property_name, node.get_property(property_name))}}
             {% endfor %}
                }
 
