--- a/tests/testcases/user_defined_properties.rdl
+++ b/tests/testcases/user_defined_properties.rdl
@@ -5,15 +5,26 @@ enum property_enum {
 			value3 = 10 { name = "Value 3"; desc="Does something"; };
 		};
 
+enum inner_property_enum {
+			value0 = 0 { name = "Value 1"; };
+		};
+
 struct property_struct {
     boolean a_bool;
     longint unsigned a_number;
     string a_string;
+    inner_property_enum a_enum;
+};
+
+struct property_outer_struct {
+    boolean a_bool;
+    property_struct inner_struct;
 };
 
 
 property bool_property_to_include { type = boolean; component = addrmap | regfile | reg | field | mem; };
 property struct_property_to_include { type = property_struct; component = addrmap | regfile | reg | field | mem; };
+property double_layer_struct_property_to_include { type = property_outer_struct; component = addrmap | regfile | reg | field | mem; };
 property enum_property_to_include { type = property_enum; component = addrmap | regfile | reg | field | mem; };
 property int_property_to_include { type = number; component = addrmap | regfile | reg | field | mem; };
 property str_property_to_include { type = string; component = addrmap | regfile | reg | field | mem; };
@@ -21,12 +32,15 @@ property int_property_to_exclude { type = number; component = addrmap | regfile 
 
 addrmap user_defined_properties {
 
+    str_property_to_include = "user_defined_properties";
+
     field field_with_properties {
         fieldwidth = 1;
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
+        double_layer_struct_property_to_include = property_outer_struct'{a_bool:true, inner_struct:property_struct'{a_bool:true, a_string:"inner", a_number:11, a_enum:inner_property_enum::value0} };
         int_property_to_include = 10;
         int_property_to_exclude = 15;
     };
@@ -41,15 +55,17 @@ addrmap user_defined_properties {
     };
 
     register_with_properties reg_a;
-    reg_a->str_property_to_include = "reg_a";
-    reg_a.field_a->str_property_to_include = "reg_a.field_a";
+    reg_a->str_property_to_include = "user_defined_properties.reg_a";
+    reg_a.field_a->str_property_to_include = "user_defined_properties.reg_a.field_a";
     register_with_properties reg_b[3];
+    reg_b->str_property_to_include = "user_defined_properties.reg_b";
+    reg_b.field_a->str_property_to_include = "user_defined_properties.reg_b.field_a";
 
     regfile regfile_with_properties {
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
         int_property_to_include = 10;
         int_property_to_exclude = 15;
         register_with_properties reg_a;
@@ -57,9 +73,19 @@ addrmap user_defined_properties {
     };
 
     regfile_with_properties reg_file_a;
-    reg_file_a.reg_a->str_property_to_include = "reg_file_a.reg_a";
-    reg_file_a.reg_a.field_a->str_property_to_include = "reg_file_a.reg_a.field_a";
+    reg_file_a->str_property_to_include = "user_defined_properties.reg_file_a";
+    reg_file_a.reg_a->str_property_to_include = "user_defined_properties.reg_file_a.reg_a";
+    reg_file_a.reg_a.field_a->str_property_to_include = "user_defined_properties.reg_file_a.reg_a.field_a";
+    reg_file_a.reg_b->str_property_to_include = "user_defined_properties.reg_file_a.reg_b";
+    reg_file_a.reg_b.field_a->str_property_to_include = "user_defined_properties.reg_file_a.reg_b.field_a";
+
     regfile_with_properties reg_file_b[2];
+
+    reg_file_b->str_property_to_include = "user_defined_properties.reg_file_b";
+    reg_file_b.reg_a->str_property_to_include = "user_defined_properties.reg_file_b.reg_a";
+    reg_file_b.reg_a.field_a->str_property_to_include = "user_defined_properties.reg_file_b.reg_a.field_a";
+    reg_file_b.reg_b->str_property_to_include = "user_defined_properties.reg_file_b.reg_b";
+    reg_file_b.reg_b.field_a->str_property_to_include = "user_defined_properties.reg_file_b.reg_b.field_a";
 
     external mem {
         mementries = 10;
@@ -67,7 +93,7 @@ addrmap user_defined_properties {
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
         int_property_to_include = 10;
         int_property_to_exclude = 15;
     } mem_with_properties;
@@ -78,7 +104,7 @@ addrmap user_defined_properties {
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
         int_property_to_include = 10;
         int_property_to_exclude = 15;
     } mem_with_properties_array[2];
@@ -89,7 +115,7 @@ addrmap user_defined_properties {
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
         int_property_to_include = 10;
         int_property_to_exclude = 15;
 
@@ -101,7 +127,7 @@ addrmap user_defined_properties {
         bool_property_to_include = true;
         enum_property_to_include = property_enum::value1;
         str_property_to_include = "invalid";
-        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10};
+        struct_property_to_include = property_struct'{a_bool:true, a_string:"hello", a_number:10, a_enum:inner_property_enum::value0};
         int_property_to_include = 10;
         int_property_to_exclude = 15;
         regfile_with_properties reg_file_a;
@@ -111,6 +137,39 @@ addrmap user_defined_properties {
     };
 
     addr_with_properties addrmap_a;
+
+    addrmap_a->str_property_to_include = "user_defined_properties.addrmap_a";
+    addrmap_a.reg_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_a";
+    addrmap_a.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_a.field_a";
+    addrmap_a.reg_b->str_property_to_include = "user_defined_properties.addrmap_a.reg_b";
+    addrmap_a.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_b.field_a";
+    addrmap_a.reg_file_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_a";
+    addrmap_a.reg_file_a.reg_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_a.reg_a";
+    addrmap_a.reg_file_a.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_a.reg_a.field_a";
+    addrmap_a.reg_file_a.reg_b->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_a.reg_b";
+    addrmap_a.reg_file_a.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_a.reg_b.field_a";
+    addrmap_a.reg_file_b->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_b";
+    addrmap_a.reg_file_b.reg_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_b.reg_a";
+    addrmap_a.reg_file_b.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_b.reg_a.field_a";
+    addrmap_a.reg_file_b.reg_b->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_b.reg_b";
+    addrmap_a.reg_file_b.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_a.reg_file_b.reg_b.field_a";
+
     addr_with_properties addrmap_b[2];
+
+    addrmap_b->str_property_to_include = "user_defined_properties.addrmap_b";
+    addrmap_b.reg_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_a";
+    addrmap_b.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_a.field_a";
+    addrmap_b.reg_b->str_property_to_include = "user_defined_properties.addrmap_b.reg_b";
+    addrmap_b.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_b.field_a";
+    addrmap_b.reg_file_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_a";
+    addrmap_b.reg_file_a.reg_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_a.reg_a";
+    addrmap_b.reg_file_a.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_a.reg_a.field_a";
+    addrmap_b.reg_file_a.reg_b->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_a.reg_b";
+    addrmap_b.reg_file_a.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_a.reg_b.field_a";
+    addrmap_b.reg_file_b->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_b";
+    addrmap_b.reg_file_b.reg_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_b.reg_a";
+    addrmap_b.reg_file_b.reg_a.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_b.reg_a.field_a";
+    addrmap_b.reg_file_b.reg_b->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_b.reg_b";
+    addrmap_b.reg_file_b.reg_b.field_a->str_property_to_include = "user_defined_properties.addrmap_b.reg_file_b.reg_b.field_a";
 
 };
