--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -51,13 +51,13 @@ class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Asyn
                          parent=parent)
 
         {% for child_node in node.children(unroll=False) -%}
-                {%- if not child_node.get_property('python_hide', default=False) or show_hidden %}
+                {%- if not hide_node_func(child_node) %}
             {{ register_class_attributes(child_node) | indent }}
                 {% endif %}
         {% endfor %}
 
         {%- for child_node in node.children(unroll=False) -%}
-            {%-  if not child_node.get_property('python_hide', default=False) or show_hidden %}
+            {%-  if not hide_node_func(child_node) %}
                 {%- if isinstance(child_node, systemrdlRegNode) %}
     @property
     def {{safe_node_name(child_node)}}(self) -> {% if child_node.is_array -%}{{get_fully_qualified_type_name(child_node)}}_array_cls{% else %}{{get_fully_qualified_type_name(child_node)}}_cls{%- endif -%}:
@@ -86,7 +86,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Asyn
         """
         return {
             {%- for child_node in node.children(unroll=False) -%}
-            {%- if not child_node.get_property('python_hide', default=False) or show_hidden %}
+            {%- if not hide_node_func(child_node) %}
             '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
             {%- endif %}
             {%- endfor %}
