--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -85,32 +85,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         # Empty generator in case there are no children of this type
         if False: yield
 
-    {% if node.has_sw_readable %}
-    @property
-    def readable_fields(self) -> Iterator[Union[Field{% if asyncoutput %}Async{% endif %}ReadOnly, Field{% if asyncoutput %}Async{% endif %}ReadWrite]]:
-        """
-        generator that produces has all the readable fields within the register
-        """
-        {% for child_node in get_reg_readable_fields(node, hide_node_func) -%}
-        yield self.{{safe_node_name(child_node)}}
-        {% endfor %}
-        # Empty generator in case there are no children of this type
-        if False: yield
-    {% endif %}
 
-    {% if node.has_sw_writable %}
-    @property
-    def writable_fields(self) -> Iterator[Union[Field{% if asyncoutput %}Async{% endif %}WriteOnly, Field{% if asyncoutput %}Async{% endif %}ReadWrite]]:
-        """
-        generator that produces has all the writable fields within the register
-        """
-        {% for child_node in get_reg_writable_fields(node, hide_node_func) -%}
-        yield self.{{safe_node_name(child_node)}}
-        {% endfor %}
-        # Empty generator in case there are no children of this type
-        if False: yield
-
-    {% if not node.has_sw_readable %}
+    {% if node.has_sw_writable and not node.has_sw_readable %}
     {# if the register has no readable components, all the fields must be writen as one #}
     {% if asyncoutput %}async {% endif %}def write_fields(self, {%- for child_node in node.fields() -%} {{safe_node_name(child_node)}} : {%- if 'encode' in child_node.list_properties() %}{{get_fully_qualified_enum_type(child_node.get_property('encode'), top_node.parent, child_node, hide_node_func)}}_enumcls{% else %}int{% endif %}{%- if not loop.last -%},{%- endif -%}{%- endfor -%}) -> None: # type: ignore[override]
         """
@@ -123,7 +99,6 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
 
         {% if asyncoutput %}await {% endif %}self.write(reg_value)
 
-    {% endif %}
     {% endif %}
 
     # build the properties for the fields
