--- a/tests/testcases/name_clash.rdl
+++ b/tests/testcases/name_clash.rdl
@@ -23,6 +23,8 @@ addrmap name_clash {
         field { fieldwidth=1; } yield = 1;
         field { fieldwidth=1; } in = 1;
         field { fieldwidth=1; } field_in = 1;
+        field { fieldwidth=1; } max = 1;
+        field { fieldwidth=1; } len = 1;
     } gpio_status;
 
     reg {
